<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount: </string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty:</string>
    <string name="start">start</string>
    <string name="history">History</string>
    <string name="history_category">"Category: "</string>
    <string name="correct_answers">Correct answers: </string>
    <string name="settings">Settings</string>
    <string name="geography">Geography</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="result">Result</string>
    <string name="quizapp">QuizApp</string>
    <string-array name="difficulties">
        <item>Any difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>