<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.main.MainFragment" >

    <TextView
        android:id="@+id/page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"/>

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="50dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/page_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/main_logo"
        android:layout_marginTop="15dp" />
    <TextView
        android:id="@+id/questions_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_amount"
        app:layout_constraintTop_toBottomOf="@id/iv_main"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="67dp"
        android:layout_marginTop="40dp"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/questions_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        app:layout_constraintLeft_toRightOf="@+id/questions_amount_text"
        app:layout_constraintTop_toBottomOf="@id/iv_main"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginTop="38dp"/>
    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/questions_amount_seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/questions_amount_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="17dp"/>

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintTop_toBottomOf="@id/questions_amount_seek_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="67dp"
        android:layout_marginTop="23dp"
        android:textSize="12sp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/category_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="67dp"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintTop_toBottomOf="@id/category_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="67dp"
        android:layout_marginTop="9dp"
        android:textSize="12sp"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/difficulty_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="67dp"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/difficulty_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/start"
        android:layout_marginTop="64dp" />




</androidx.constraintlayout.widget.ConstraintLayout>