<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/card_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/history_category"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000000"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:id="@+id/correct_answers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_category"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/correct_answers"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"/>
            <TextView
                android:id="@+id/card_difficulty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/correct_answers_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/difficulty"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_difficulty_text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="12.00.2017"
                android:layout_margin="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>