<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.result.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/result_iv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="71dp"
            android:src="@drawable/ic_baseline_check_24" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/white"
            app:menu="@menu/toolbar_menu">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/toolbar_title" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/result_iv"
            app:layout_constraintBottom_toTopOf="@id/btn_finish"
            android:layout_marginHorizontal="16dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/result_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="Category: Mixed"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:layout_marginTop="22dp"/>

                <TextView
                    android:id="@+id/result_correct_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/result_category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/correct_answers"
                    android:layout_marginTop="39dp"
                    android:layout_marginBottom="62dp"
                    android:layout_marginStart="26dp" />

                <TextView
                    android:id="@+id/result_correct_answers_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/result_correct_answers"
                    app:layout_constraintLeft_toLeftOf="@id/result_correct_answers"
                    app:layout_constraintRight_toRightOf="@id/result_correct_answers"
                    android:text="8" />
                <TextView
                    android:id="@+id/questions_amount_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/result_correct_answers"
                    app:layout_constraintLeft_toRightOf="@id/result_correct_answers_value"
                    android:text="/8" />

                <TextView
                    android:id="@+id/result_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/result_category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/result"
                    android:layout_marginTop="39dp"
                    android:layout_marginBottom="62dp"
                    android:layout_marginEnd="26dp" />

                <TextView
                    android:id="@+id/result_percent_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/result_percent"
                    app:layout_constraintLeft_toLeftOf="@id/result_percent"
                    app:layout_constraintRight_toRightOf="@id/result_percent"
                    android:text="80%" />

                <TextView
                    android:id="@+id/result_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/result_category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/difficulty"
                    android:layout_marginTop="39dp"
                    android:layout_marginBottom="62dp"
                    android:layout_marginStart="26dp" />

                <TextView
                    android:id="@+id/result_difficulty_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/result_difficulty"
                    app:layout_constraintLeft_toLeftOf="@id/result_difficulty"
                    app:layout_constraintRight_toRightOf="@id/result_difficulty"
                    android:text="All" />




            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="124dp"
            android:backgroundTint="@color/biruza"
            android:text="@string/finish"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>